# ffmpeg-di

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: decode_audio.rs
src/: lib.rs
src/codec/: audio.rs  capabilities.rs  codec.rs  codec_id.rs  codec_par.rs  mod.rs
src/codec/context/: mod.rs
src/codec/context/decoder/: audio.rs  mod.rs
src/format/: disposition.rs  input.rs  mod.rs  stream.rs
src/format/context/: destroy.rs  input.rs  mod.rs
src/format/packet/: mod.rs  side_data.rs  side_data_type.rs
src/util/: channel_layout.rs  dict.rs  discard.rs  media.rs  mod.rs  rational.rs  samplefmt.rs
src/util/frame/: audio.rs  mod.rs  side_data.rs
tests/: mod.rs
tests/codec/: context_tests.rs  id_tests.rs  mod.rs
tests/format/: input_tests.rs  mod.rs
tests/util/: channel_layout_tests.rs  mod.rs
