[package]
name = "ffmpeg-di"
version = "1.0.0"
build = "build.rs"

authors = ["yaozhihui<zhihui.yao@aispeech.com>"]
license = "MIT"

description = "Safe FFmpeg wrapper (FFmpeg 4 5 6 compatible fork of the ffmpeg crate)"
documentation = "https://docs.rs/ffmpeg-di"
homepage = "https://github.com/aispeech-di/ffmpeg-di#readme"
repository = "https://github.com/aispeech-di/ffmpeg-di"
readme = "README.md"
keywords = ["ffmpeg", "multimedia", "video", "audio"]
categories = ["multimedia"]

edition = "2021"

[dependencies]
libc     = "0.2.144"
bitflags = "1.3.2"

[dependencies.image]
version  = "0.24.6"
optional = true

[dependencies.ffmpeg-sys-next]
version = "6.0.1"
default-features = false

[dependencies.anyhow]
version = "1.0.71"

[features]
default = ["codec", "device", "filter", "format", "software-resampling", "software-scaling"]

# components
codec               = ["ffmpeg-sys-next/avcodec"]
device              = ["ffmpeg-sys-next/avdevice", "format"]
filter              = ["ffmpeg-sys-next/avfilter"]
format              = ["ffmpeg-sys-next/avformat", "codec"]
resampling          = ["ffmpeg-sys-next/avresample"]
postprocessing      = ["ffmpeg-sys-next/postproc"]
software-resampling = ["ffmpeg-sys-next/swresample"]
software-scaling    = ["ffmpeg-sys-next/swscale", "codec"]